Tue May 28 19:08:41 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/ld_check.rb : Fix incomplete object
	  cross-reference graph and function call graph in order to correctly
	  warn about useless objects.
	* lib/adlint/exam/c_builtin/ld_metric.rb : Ditto.
	* lib/adlint/ld/phase.rb : Ditto.
	* lib/adlint/ld/util.rb : Ditto.

Tue May 28 16:28:11 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/ld/object.rb : Rewrite object cross-reference graph and
	  function call graph management.
	* lib/adlint/ld/typedef.rb : Ditto.
	* lib/adlint/analyzer.rb : Ditto.

Tue May 28 11:31:54 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cpp/phase.rb : Refine inner object names of phase context.
	* lib/adlint/cc1/phase.rb : Ditto.
	* lib/adlint/exam/c_builtin/cpp_check.rb : Ditto.
	* lib/adlint/exam/c_builtin/cpp_check_shima.rb : Ditto.
	* lib/adlint/exam/c_builtin/cpp_code.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_check.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_check_shima.rb : Ditto.
	* lib/adlint/exam/c_builtin/cc1_metric.rb : Ditto.
	* lib/adlint/cc1/util.rb : Ditto.

Mon May 27 15:21:14 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/exam/c_builtin/cc1_code.rb : Fix incomplete object
	  cross-reference extraction in order to record object references
	  within global scope in case of global function table initialization.
	* lib/adlint/code.rb : Ditto.

Fri May 24 19:11:52 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/parser.y : Remove useless state management of the
	  identifier translation in `struct_declaration'.

Fri May 24 16:05:07 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0491.feature : Add scenario to reproduce abend
	  problem of parser.

	* lib/adlint/cc1/parser.y : Fix bad state management of the identifier
	  translation again and again.

Fri May 24 15:09:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>
